# modern-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cppcheck.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: AddUninstallTarget.cmake  CPM.cmake  CompilerWarnings.cmake  Doxygen.cmake  GlobalSettings.cmake  Info.cmake  Options.cmake  PackageProject.cmake  Packing.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  cmake_uninstall.cmake.in  version.hpp.in
include/modern_cpp_project/: greeter.hpp
scripts/: rename_project.sh
src/: CMakeLists.txt  greeter.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/src/: greeter_test.cpp  main.cpp
